tests/snapshots/signature_layout/async_and_nested.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/async_and_nested.input.py
---
signature-layout@129..157
signature-layout@81..112
