tests/snapshots/signature_layout/basic.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/basic.input.py
---
signature-layout@150..181
