tests/snapshots/signature_layout/class_method.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/class_method.input.py
---
signature-layout@309..380
