tests/snapshots/signature_layout/collapse.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/signature_layout/collapse.input.py
---
"""
A two-parameter signature already in expanded shape whose inline form
fits under both thresholds collapses back to a single line. Pins the
reverse direction of the rewrite as direction-symmetric with
expansion.
"""


def render(palette: str, target: int):
    return (palette, target)
