tests/snapshots/signature_layout/count_trigger_off.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/count_trigger_off.input.py
---

