tests/snapshots/signature_layout/decorated.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/decorated.input.py
---
signature-layout@298..378
